Add AccountTree to select accounts

--- a/static/index.html
+++ b/static/index.html
@@ -15,6 +15,7 @@
 <script src="static/external/react-bootstrap/react-bootstrap.min.js"></script>
 <script src="static/external/react-widgets/react-widgets.js"></script>
 <script src="static/external/big/big.min.js"></script>
+<script src="static/external/classnames/index.js"></script>
 
 <script type="text/javascript" src="static/utils.js"></script>
 <script type="text/javascript" src="static/models.js"></script>
