Add basic transaction register support

--- a/static/index.html
+++ b/static/index.html
@@ -21,6 +21,7 @@
 <script type="text/javascript" src="static/models.js"></script>
 
 <script type="text/jsx" src="static/top_bar.js"></script>
+<script type="text/jsx" src="static/account_register.js"></script>
 <script type="text/jsx" src="static/accounts.js"></script>
 <script type="text/jsx" src="static/ui.js"></script>
 
