--- a/static/index.html
+++ b/static/index.html
@@ -2,28 +2,18 @@
 <head>
 <title>MoneyGo</title>
 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
-<link rel="stylesheet" href="static/external/react-widgets/react-widgets.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
+<link rel="stylesheet" href="static/node_modules/react-widgets/dist/css/react-widgets.css">
 <link rel="stylesheet" href="static/stylesheet.css">
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react-with-addons.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/JSXTransformer.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/globalize/0.1.1/globalize.min.js"></script>
-<script src="static/external/react-bootstrap/react-bootstrap.min.js"></script>
-<script src="static/external/react-widgets/react-widgets.js"></script>
 <script src="static/external/big/big.min.js"></script>
 <script src="static/external/classnames/index.js"></script>
 
 <script type="text/javascript" src="static/utils.js"></script>
 <script type="text/javascript" src="static/models.js"></script>
-
-<script type="text/jsx" src="static/top_bar.js"></script>
-<script type="text/jsx" src="static/account_register.js"></script>
-<script type="text/jsx" src="static/accounts.js"></script>
-<script type="text/jsx" src="static/ui.js"></script>
+<script type="text/javascript" src="static/bundle.js"></script>
 
 </head>
 <body>
