WIP: Stacked bar chart

--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
 <link rel="stylesheet" href="static/react-widgets/css/react-widgets.css">
-<link rel="stylesheet" href="static/stylesheet.css">
+<link rel="stylesheet" href="static/css/stylesheet.css">
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script>
 
